<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestore.authentication.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_allShoesFragment"
            app:destination="@id/allShoesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestore.welcomeBoard.WelcomeFragment"
        android:label="@string/fragment_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoestore.instruction.InstructionsFragment"
        android:label="@string/fragment_instruction"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionsFragment_to_allShoesFragment"
            app:destination="@id/allShoesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/allShoesFragment"
        android:name="com.example.shoestore.allShoes.AllShoesFragment"
        android:label="@string/fragment_all_shoes"
        tools:layout="@layout/fragment_all_shoes" >
        <action
            android:id="@+id/action_allShoesFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"
            app:popUpTo="@id/allShoesFragment" />
        <action
            android:id="@+id/action_allShoesFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.example.shoestore.allShoes.ShoeDetailsFragment"
        android:label="@string/fragment_shoe_details"
        tools:layout="@layout/fragment_shoe_details" >
        <action
            android:id="@+id/action_shoeDetailsFragment_to_allShoesFragment"
            app:destination="@id/allShoesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>