<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
     <variable
         name="shoe"
         type="com.example.shoestore.model.Shoe" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:text="@{shoe.name}"
                android:hint="@string/name"
                style="@style/text_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/company_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.company}"
                android:hint="@string/company"
                style="@style/text_style"

                app:layout_constraintStart_toStartOf="@id/name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.size}"
                android:hint="@string/size"
                style="@style/text_style"
                app:layout_constraintStart_toStartOf="@id/name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/company_text_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.description}"
                android:hint="@string/description"
                style="@style/text_style"

                app:layout_constraintStart_toStartOf="@id/name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/size_text_view" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/v_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".50" />
          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/item_image"
              android:layout_width="0dp"
              android:layout_height="0dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="@id/v_g"
              android:src="@{shoe.image}"
              android:scaleType="centerCrop"
              />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>