<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcomeBoard.WelcomeFragment">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/welcome_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_h_g1"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/welcome"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:padding="@dimen/_16sdp"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/welcome_h_g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".40" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/welcome_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcome_h_g1"
      android:text="@string/welcome_text"
      android:textColor="@color/myColor"
      android:padding="@dimen/_16sdp"
      android:textAllCaps="false"
      android:layout_marginTop="@dimen/_32sdp"
      android:textSize="@dimen/_32sdp"
      />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
            android:text="@string/app_name_welcome"
            android:textColor="@color/myColor"
            android:textAllCaps="false"
            android:textSize="@dimen/_32sdp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_16sdp"
            android:text="@string/next"
            android:layout_marginHorizontal="@dimen/_64sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:backgroundTint="@color/myColor"
            android:drawableEnd="@drawable/ic_forward_24"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>