<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.shoestore.authentication.LoginViewModel"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginFragment">
<ProgressBar
    android:id="@+id/loading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:visibility="@{viewModel.setLoading?View.VISIBLE:View.GONE}"

    android:backgroundTint="@color/myColor"
    app:layout_constraintBottom_toBottomOf="parent"

    />
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/login_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/login_h_g1"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/login_image"
         android:adjustViewBounds="true"



         />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_h_g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".30" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_32sdp"
            app:endIconDrawable="@drawable/ic_email_24"
            app:endIconMode="custom"
            app:endIconTint="@color/myColor"
            app:hintEnabled="false"
            app:Error = "@{viewModel.userEmailError}"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:text="@={viewModel.userEmail}"
                android:padding="12dp"
                android:paddingHorizontal="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_32sdp"
            app:endIconTint="@color/myColor"
            app:hintEnabled="false"
            android:minHeight="48dp"
            app:Error = "@{viewModel.userPasswordError}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/myColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:text="@={viewModel.userPassword}"
                android:inputType="textPassword"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btn_login"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/layout_password"
           android:layout_marginTop="@dimen/_32sdp"
           android:padding="@dimen/_16sdp"
          android:text="@string/login"
          android:layout_marginHorizontal="@dimen/_64sdp"
           app:cornerRadius="@dimen/_16sdp"
          android:backgroundTint="@color/myColor"
          android:onClick="@{()->viewModel.login()}"

          />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_16sdp"
            android:text="@string/signup"
            android:layout_marginHorizontal="@dimen/_64sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:backgroundTint="@color/myColor"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>